ingress/traefik-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect
  namespace: default
spec:
  entryPoints:
    - web 
  routes:
    - match: Host(`stormmind.ch`)
      kind: Rule
      services:
        - name: frontend-service
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure 
  routes:
    - match: Host(`stormmind.ch`) && (PathPrefix(`/`) || PathPrefix(`/Forecast`) || PathPrefix(`/Report`) || PathPrefix(`/AboutUs`))
      kind: Rule
      services:
        - name: frontend-service
          port: 80
    - match: Host(`stormmind.ch`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend-service
          port: 80
  tls:
    secretName: stormmind-ch-tls
    # certResolver: letsencrypt-prod
    # domains:
    #   - main: stormmind.ch
